--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8"
   },
