--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-vue": "^2.0.2",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1",
